<resources>
  <string name="action_reply">Reply</string>
  <string name="activity_intent_error">Unable to send activity intent, please check command format</string>
  <string name="add_service_data_field">Add Field</string>
  <string name="add_widget">Add widget</string>
  <string name="app_name">Home Assistant</string>
  <string name="app_version_info">App Version Info</string>
  <string name="application_version">Application Version</string>
  <string name="attempting_registration">Registering application…</string>
  <string name="attributes">Attributes</string>
  <string name="auth_cancel">Authentication Cancelled</string>
  <string name="auth_error">Authentication Error</string>
  <string name="auth_error_message">The \'Username\' and \'Password\' fields must be completed</string>
  <string name="auth_request">Authentication Requested</string>
  <string name="background_access_disabled">Home Assistant does not have access to run in the background.  Click here to request permissions.</string>
  <string name="background_access_enabled">Home Assistant has access to run in the background.</string>
  <string name="background_access_title">Background Access</string>
  <string name="basic_sensor_lullaby">Lullaby</string>
  <string name="basic_sensor_name_active_notification_count">Active Notification Count</string>
  <string name="basic_sensor_name_activity">Detected Activity</string>
  <string name="basic_sensor_name_alarm">Next Alarm</string>
  <string name="basic_sensor_name_app_importance">App Importance</string>
  <string name="basic_sensor_name_app_inactive">App Inactive</string>
  <string name="basic_sensor_name_app_memory">App Memory</string>
  <string name="basic_sensor_name_app_rx_gb">App Rx GB</string>
  <string name="basic_sensor_name_app_standby">App Standby Bucket</string>
  <string name="basic_sensor_name_app_tx_gb">App Tx GB</string>
  <string name="basic_sensor_name_battery_health">Battery Health</string>
  <string name="basic_sensor_name_battery_level">Battery Level</string>
  <string name="basic_sensor_name_battery_state">Battery State</string>
  <string name="basic_sensor_name_bluetooth">Bluetooth Connection</string>
  <string name="basic_sensor_name_bluetooth_ble_emitter">Ble Transmitter</string>
  <string name="basic_sensor_name_bluetooth_state">Bluetooth State</string>
  <string name="basic_sensor_name_call_number">Call Number</string>
  <string name="basic_sensor_name_charger_type">Charger Type</string>
  <string name="basic_sensor_name_charging">Is Charging</string>
  <string name="basic_sensor_name_current_time_zone">Current Time Zone</string>
  <string name="basic_sensor_name_current_version">Current Version</string>
  <string name="basic_sensor_name_device_locked">Device Locked</string>
  <string name="basic_sensor_name_device_secure">Device Secure</string>
  <string name="basic_sensor_name_doze">Doze Mode</string>
  <string name="basic_sensor_name_external_storage">External Storage</string>
  <string name="basic_sensor_name_geolocation">Geocoded Location</string>
  <string name="basic_sensor_name_interactive">Interactive</string>
  <string name="basic_sensor_name_internal_storage">Internal Storage</string>
  <string name="basic_sensor_name_keyguard_locked">Keyguard Locked</string>
  <string name="basic_sensor_name_keyguard_secure">Keyguard Secure</string>
  <string name="basic_sensor_name_last_notification">Last Notification</string>
  <string name="basic_sensor_name_last_reboot">Last Reboot</string>
  <string name="basic_sensor_name_last_removed_notification">Last Removed Notification</string>
  <string name="basic_sensor_name_last_update">Last Update Trigger</string>
  <string name="basic_sensor_name_location_accurate">Single Accurate Location</string>
  <string name="basic_sensor_name_location_background">Background Location</string>
  <string name="basic_sensor_name_location_zone">Location Zone</string>
  <string name="basic_sensor_name_mobile_data">Mobile Data</string>
  <string name="basic_sensor_name_mobile_data_roaming">Mobile Data Roaming</string>
  <string name="basic_sensor_name_mobile_rx_gb">Mobile Rx GB</string>
  <string name="basic_sensor_name_mobile_tx_gb">Mobile Tx GB</string>
  <string name="basic_sensor_name_phone">Phone State</string>
  <string name="basic_sensor_name_power_save">Power Save</string>
  <string name="basic_sensor_name_public_ip">Public IP Address</string>
  <string name="basic_sensor_name_sim1">SIM 1</string>
  <string name="basic_sensor_name_sim2">SIM 2</string>
  <string name="basic_sensor_name_sleep_confidence">Sleep Confidence</string>
  <string name="basic_sensor_name_sleep_segment">Sleep Segment</string>
  <string name="basic_sensor_name_total_rx_gb">Total Rx GB</string>
  <string name="basic_sensor_name_total_tx_gb">Total Tx GB</string>
  <string name="basic_sensor_name_wifi">WiFi Connection</string>
  <string name="basic_sensor_name_wifi_bssid">WiFi BSSID</string>
  <string name="basic_sensor_name_wifi_frequency">WiFi Frequency</string>
  <string name="basic_sensor_name_wifi_ip">WiFi IP Address</string>
  <string name="basic_sensor_name_wifi_link_speed">WiFi Link Speed</string>
  <string name="basic_sensor_name_wifi_signal">WiFi Signal Strength</string>
  <string name="basic_sensor_name_wifi_state">WiFi State</string>
  <string name="basic_sensor_sleep_events">Sleep Events</string>
  <string name="basic_sensor_sleep_tracking">Sleep Tracking</string>
  <string name="biometric_message">Unlock using your biometric or screenlock credential</string>
  <string name="biometric_set_title">Confirm to continue</string>
  <string name="biometric_title">Home Assistant is locked</string>
  <string name="broadcast_intent_error">Unable to send broadcast intent, please check the command format</string>
  <string name="calendar">Calendar</string>
  <string name="cancel">Cancel</string>
  <string name="changelog">Change Log</string>
  <string name="checking_with_home_assistant">Checking with Home Assistant</string>
  <string name="config">Configuration</string>
  <string name="configure_service_call">Configure Service Call</string>
  <string name="configure_widget_label">Widget Label</string>
  <string name="confirm_delete_all_notification_message">Are you sure? This cannot be undone</string>
  <string name="confirm_delete_all_notification_title">Confirm deleting all notifications</string>
  <string name="confirm_delete_this_notification_message">Are you sure? This cannot be undone</string>
  <string name="confirm_delete_this_notification_title">Confirm deleting this notification</string>
  <string name="confirm_delete_this_widget_message">Are you sure? This cannot be undone. If you accidentally deleted the wrong widget you will need to remove the bad widget from the home screen and create a new one.</string>
  <string name="confirm_delete_this_widget_title">Confirm deleting this widget</string>
  <string name="confirm_negative">NO</string>
  <string name="confirm_positive">YES</string>
  <string name="connect_to_home_assistant">Connect to Home Assistant</string>
  <string name="connect_to_home_internet">Make sure your phone is connected
to your home internet.</string>
  <string name="connected_to_home_assistant">Connected to Home Assistant</string>
  <string name="crash_reporting">Crash Reporting</string>
  <string name="crash_reporting_summary">Help the developers fix bugs and crashes by leaving this enabled. If the application crashes this will automatically generate and send a report. If you notice a crash also create an issue on Github!</string>
  <string name="create_template">Create Template</string>
  <string name="database_event_failure">Unable to send migration failure event to Home Assistant</string>
  <string name="database_migration_failed">Database migration failed, all sensor and widget data has been reset. Please re-enable your sensors and recreate your widgets.</string>
  <string name="delete_all_notifications">Delete all notifications from history</string>
  <string name="filter_notifications">Filter Notifications</string>
  <string name="filter_sensors">Filter sensors</string>
  <string name="last_num_notifications">Last %1$d Notifications</string>
  <string name="list_button_widgets">List of Button Widgets</string>
  <string name="list_entity_state_widgets">List of Entity State Widgets</string>
  <string name="list_template_widgets">List of Template Widgets</string>
  <string name="manage_all_notifications">Manage All Notifications</string>
  <string name="nfc_btn_create_duplicate">Create duplicate</string>
  <string name="nfc_btn_fire_event">Fire event</string>
  <string name="nfc_btn_read_tag">Read NFC Tag</string>
  <string name="nfc_btn_share">Share</string>
  <string name="nfc_btn_write_tag">Write NFC Tag</string>
  <string name="nfc_edit_fragment_label">NFC Edit Fragment</string>
  <string name="nfc_example_trigger">Example Trigger</string>
  <string name="nfc_read_fragment_label">NFC Read Fragment</string>
  <string name="nfc_tag_identifier">Tag Identifier</string>
  <string name="nfc_welcome_fragment_label">NFC Welcome Fragment</string>
  <string name="nfc_welcome_message">NFC tags written by the app will fire an event once you bring your device near them.\n\nTags will work on any device with Home Assistant installed which has hardware support to read them.</string>
  <string name="nfc_write_fragment_label">NFC Write Fragment</string>
  <string name="no_notifications">No Notifications</string>
  <string name="no_notifications_summary">You have not received any notifications yet</string>
  <string name="no_widgets">No Widgets Found</string>
  <string name="no_widgets_summary">You have not added any widgets, please add one from the home screen to populate this list.</string>
  <string name="pref_location_background_summary">Update your location behind the scenes, periodically.</string>
  <string name="pref_location_background_title">Background Location Tracking</string>
  <string name="pref_location_zone_summary">Import existing Home Assistant zones as geofences for zone based tracking.</string>
  <string name="pref_location_zone_title">Zone Based Tracking</string>
  <string name="retry">Retry</string>
  <string name="skip">Skip</string>
  <string name="status_of_mobile_app_integration">Status of mobile app integration:</string>
  <string name="widget_text_hint_label">Label</string>
  <string name="widget_text_hint_service_data">Entity ID</string>
  <string name="widget_text_hint_service_domain">Domain</string>
  <string name="widget_text_hint_service_service">Service</string>
  <string name="search_sensors">Search sensors</string>
  <string name="filter_show_only_enabled_sensors">Only enabled sensors</string>
  <string name="share_logs">Share logs</string>
  <string name="refresh_log">Refresh logs</string>
  <string name="get_help">Get Help</string>
  <string name="search_notifications">Search notifications</string>
  <string name="manage_tiles">Manage Tiles</string>
  <string name="tile_list">List of Tiles</string>
  <string name="tile_label">Tile Label</string>
  <string name="tile_subtitle">Tile Subtitle</string>
  <string name="tile_entity">Select a entity to toggle or call</string>
  <string name="tile_save">Update Tile Data</string>
  <string name="tile_missing_entity_title">Missing Valid Entity Domains</string>
  <string name="tile_missing_entity_summary">You must have one of the following domains in order to use this feature: cover, fan, input_boolean, light, remote, scene, script, switch</string>
  <string name="welcome_hass">Welcome to Home Assistant Companion!</string>
  <string name="welcome_hass_desc">This app connects to your Home Assistant server and allows integrating data about you and your phone.\n\nHome Assistant is free and open source home automation software with a focus on local control and privacy.</string>
  <string name="learn_more">Learn More</string>
  <string name="continue_connect">Continue</string>
</resources>