<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="manage_tiles"
        android:title="@string/manage_tiles"
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="true">
        <ListPreference
            android:key="tile_list"
            android:title="@string/tile_list"
            android:entryValues="@array/tile_ids"
            android:entries="@array/tile_name"
            android:defaultValue="tile_1"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="tile_icon"
            android:title="Tile Icon"
            android:icon="@drawable/ic_stat_ic_notification_blue" />
        <EditTextPreference
            android:key="tile_label"
            android:title="@string/tile_label"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />
        <EditTextPreference
            android:key="tile_subtitle"
            android:title="@string/tile_subtitle"
            app:useSimpleSummaryProvider="true"
            app:isPreferenceVisible="false"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="tile_missing_entity"
            android:title="@string/tile_missing_entity_title"
            android:summary="@string/tile_missing_entity_summary"
            app:isPreferenceVisible="false"
            app:iconSpaceReserved="false"
            android:selectable="false" />
        <ListPreference
            android:key="tile_entity"
            android:title="@string/tile_entity"
            app:useSimpleSummaryProvider="true"
            app:enabled="false"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="tile_save"
            android:title="@string/tile_save"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>
</androidx.preference.PreferenceScreen>