<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/configure_service_call" />

    <EditText
        android:id="@+id/widget_text_config_domain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/widget_text_hint_service_domain"
        android:inputType="text" />

    <EditText
        android:id="@+id/widget_text_config_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/widget_text_hint_service_service"
        android:inputType="text" />

    <EditText
        android:id="@+id/widget_text_config_service_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/widget_text_hint_service_data"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/configure_widget_label" />

    <EditText
        android:id="@+id/widget_text_config_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/widget_text_hint_label"
        android:inputType="text" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_widget" />

</LinearLayout>