<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:key="no_widgets"
        android:title="@string/no_widgets"
        android:summary="@string/no_widgets_summary"
        android:selectable="false"
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false" />

    <PreferenceCategory
        android:key="list_button_widgets"
        android:title="@string/list_button_widgets"
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false" />

    <PreferenceCategory
        android:key="list_entity_state_widgets"
        android:title="@string/list_entity_state_widgets"
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false" />

    <PreferenceCategory
        android:key="list_template_widgets"
        android:title="@string/list_template_widgets"
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false" />

</androidx.preference.PreferenceScreen>