<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:key="no_notifications"
        android:title="@string/no_notifications"
        android:summary="@string/no_notifications_summary"
        android:selectable="false"
        app:icon="@drawable/ic_ringer_mute"
        app:isPreferenceVisible="false" />

    <PreferenceCategory
        android:key="manage_notifications"
        android:title="@string/manage_all_notifications"
        app:isPreferenceVisible="false"
        app:iconSpaceReserved="false">
        <androidx.preference.DropDownPreference
            android:key="filter_notifications"
            android:title="@string/filter_notifications"
            android:entries="@array/filter_notifications_entries"
            android:entryValues="@array/filter_notifications_values"
            app:defaultValue="last25"
            app:icon="@drawable/ic_filter"
            app:isPreferenceVisible="false"
            app:useSimpleSummaryProvider="true" />
        <Preference
            android:key="delete_all"
            android:title="@string/delete_all_notifications"
            app:icon="@drawable/ic_delete"
            app:isPreferenceVisible="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="list_notifications"
        android:title="@string/last_num_notifications"
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false" />
</androidx.preference.PreferenceScreen>